fix: vh issues on mobile devices

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,11 +1,12 @@
 html {
   height: 100%;
+  --vh: 7.96px;
 }
 
 body {
   color: #000000;
   font-family: "Open Sans";
-  min-height: 100vh;
+  min-height: calc(100 * var(--vh));
 }
 
 h1,
@@ -194,7 +195,7 @@ nav button:focus {
 }
 
 .cart-side-wrap .has-items {
-    height: calc(100vh - 100px);
+    height: calc(100* var(--vh) - 100px);
 }
 
 .cart-side-wrap .cart-footer {
@@ -213,8 +214,8 @@ nav button:focus {
 }
 
 .cart-side-wrap .top-cart-items {
-    height: calc(100vh - 100px);
-    max-height: calc(100vh - 189px);
+    height: calc(100* var(--vh) - 100px);
+    max-height: calc(100* var(--vh) - 189px);
     overflow: hidden;
     overflow-y: auto;
     padding: 0;
@@ -307,7 +308,7 @@ nav button:focus {
 }
 
 .carousel-item {
-  height: 95vh;
+  height: calc(95 * var(--vh));
   min-height: 350px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
@@ -521,7 +522,7 @@ footer .separator {
 }
 
 .collection-hero-title {
-    bottom: 2vh;
+    bottom: calc(2 * var(--vh));
     transform: none;
     position: absolute;
     color: #fff;
